--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,2 @@
 REACT_APP_NODE_ENV = 'development'
-REACT_APP_PRODUCTION_SOCKET_URL = ''
-REACT_APP_DEVELOPMENT_SOCKET_PORT = 5000
+REACT_APP_BACKEND_URL = 'http://localhost:5000'
